created an automatic html creator

--- a/index.html
+++ b/index.html
@@ -1,26 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TV Schedules</title>
-  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-</head>
-<body>
- 
-<script>
-$.getJSON("data.json", function(data){
-  var items = [];  
-  $.each( data, function( key, val ) {
-    items.push( "<li>" + key + "</li>" );
-  });
- 
-  $( "<ul/>", {
-    "class": "my-new-list",
-    html: items.join("")
-  }).appendTo( "body" );
-});
-</script>
- 
-</body>
-</html>
 
+		<!doctype html>
+			<html lang="en">
+				<head>
+				  <meta charset="utf-8">
+				  <title>TV Schedules</title>				  
+				</head>
+				<body><h1>movies_now</h1><ul><li><strong>05:50 AM:</strong>Hot Shots!</li><li><strong>07:10 AM:</strong>Anacondas: Trail Of Blood</li><li><strong>08:40 AM:</strong>Fantastic Four: Rise Of The Silver Surfer</li><li><strong>10:10 AM:</strong>Alien</li><li><strong>12:10 PM:</strong>Police Story 2013</li><li><strong>02:30 PM:</strong>Mr. Go</li><li><strong>05:15 PM:</strong>The Lord of the Rings: The Two Towers</li><li><strong>09:00 PM:</strong>G.I. Joe: The Rise of Cobra</li><li><strong>11:00 PM:</strong>The Last Airbender</li><li><strong>01:05 AM:</strong>Alien</li><li><strong>03:00 AM:</strong>Decoys 2: Alien Seduction</li></ul><h1>hbo</h1><ul><li><strong>12.59AM:</strong>House at the End of the Street</li><li><strong>2.45AM:</strong>7 Seconds</li><li><strong>4.20AM:</strong>The Assassins</li><li><strong>6.15AM:</strong>The Hunger Games</li><li><strong>8.52AM:</strong>Around the World in 80 Days</li><li><strong>11.05AM:</strong>The Chronicles of Narnia: Prince Caspian</li><li><strong>1.44PM:</strong>Goal! 2: Living the Dream</li><li><strong>3.51PM:</strong>Hugo</li><li><strong>6.20PM:</strong>The Next Three Days</li><li><strong>9.00PM:</strong>Wrath of the Titans</li></ul><h1>sony_pix</h1><ul><li><strong>12:08 AM:</strong>The Peacemaker</li><li><strong>02:05 AM:</strong>Conan The Destroyer</li><li><strong>04:07 AM:</strong>A Few Good Man</li><li><strong>06:19 AM:</strong>Rocky</li><li><strong>08:04 AM:</strong>Underworld Evolution</li><li><strong>09:48 AM:</strong>The Terminator</li><li><strong>11:41 AM:</strong>The Twilight Saga: Beraking Dawn - Part 1</li><li><strong>01:35 PM:</strong>21 Jump Street</li><li><strong>03:31 PM:</strong>Walking Tall (2004)</li><li><strong>04:59 PM:</strong>Angels & Demons</li><li><strong>07:18 PM:</strong>Men In Black 2</li><li><strong>08:59 PM:</strong>2 Guns</li><li><strong>11:15 PM:</strong>The Exorcism Of Emily Rose</li><li><strong>11:15 PM:</strong>The Exorcism Of Emily Rose</li></ul><h1>star_movies</h1><ul><li><strong>10:00 AM:</strong>Oz The Great And Powerful</li><li><strong>12:30 PM:</strong>The Incredible Hulk</li><li><strong>3:00 PM:</strong>Prometheus</li><li><strong>5:00 PM:</strong>A White Snake'S Revenge</li><li><strong>7:00 PM:</strong>The Gods Must Be Crazy Ii</li><li><strong>9:00 PM:</strong>Iron Man 3</li><li><strong>11:30 PM:</strong>Vacancy 2 : The First Cut</li></ul><h1>zee_studio</h1><ul><li><strong>12:20 am:</strong>American Dreamz</li><li><strong>2:10 am:</strong>Bowfinger</li><li><strong>3:40 am:</strong>That Old Feeling</li><li><strong>5:20 am:</strong>The Dinosaur Project</li><li><strong>7:30 am:</strong>Enjoying Everyday Life</li><li><strong>8:00 am:</strong>Children of Men</li><li><strong>10:05 am:</strong>Notting Hill</li><li><strong>12:25 pm:</strong>Prince of Persia : The Sands of Time</li><li><strong>2:45 pm:</strong>Pretty Woman</li><li><strong>5:00 pm:</strong>John Carter</li><li><strong>7:40 pm:</strong>Dinner for Schmucks</li><li><strong>10:00 pm:</strong>Alice in Wonderland</li></ul></body></html>
